--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ justify-content: center;
 align-items: center;
 height: 100vh;
 background: black;
-background-image:url(relax.jpg.jpg);
+background-image:url(relax.jpg);
 background-size: cover;
 background-position: center;
 background-repeat: no-repeat;
@@ -35,4 +35,9 @@ button:hover{
   position: absolute;
   top: 0;
   left: 20px;
+}
+button{
+  height: 25px; 
+  width: 60px;
+
 }
